--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@types/uuid": "^9.0.8",
+    "cypress": "^13.6.4",
+    "eslint-plugin-cypress": "^2.15.1",
     "fetch-mock": "^9.11.0",
     "jest": "^27.5.1",
     "react-test-renderer": "^18.2.0",
